# langchain-course

./: .gitignore  pyproject.toml
src/: 02_batch.py  02_image.py  02_multiLLM.py  02_run_ollama.py  02_stream.py  03_ChatPromptTemplate.py  03_OutPutParser_PydanticOutputParser  03_OutPutParser_byLangChain.py  03_OutPutParser_bylLLM.py  03_OutPutParser_str  03_partial.py  03_prompt_template  main copy.py  main.py
