[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.6",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
]
